--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit
-pandas
-numpy
-joblib
-tensorflow
-h5py
-openpyxl
+streamlit==1.37.1
+pandas==2.2.2
+numpy==1.26.4
+tensorflow==2.15.0.post1
+h5py==3.11.0
+joblib==1.4.2
+openpyxl==3.1.5
+protobuf==3.20.3
+typing-extensions==4.12.2
